popovers: Fix overly narrow topic popover for spectators.
The width of the popover was being defined by topic follow / mute
buttons which are not visible for spectators and hence the popover
shrunk.

Fixed by giving the topic name a minimum width of 200px.

--- a/web/styles/popovers.css
+++ b/web/styles/popovers.css
@@ -275,6 +275,7 @@
         line-height: 1.1;
         margin-top: 4px;
         white-space: pre-wrap;
+        min-width: 12.5em; /* 200px at 16px/1em */
     }
 }
 
